--- a/style.css
+++ b/style.css
@@ -167,41 +167,71 @@ nav ul li{
 
 .contato{
     margin-top: 60px;
-    height: 600px;
+    height: 400px;
     width: 80%;
     margin-left: 10%;
-    background-color: black;
-}
-
-footer{
-    width: 80%;
-    height: 200px;
-    margin-left: 10%;
-    background-color: grey;
-    margin-top: 30px;
+    box-shadow: 1px 5px 5px 5px grey;
     display: flex;
-    justify-content: space-around;
+    margin-bottom: 10px;
+   
+}
+.contato-esquerda{
+    width: 50%;
+    height: 100%;
     text-align: center;
 }
-footer .box-footer1{
+.contato-esquerda h1{
+    margin-top: 50px;
+}
+.icons{
+    height: 15%;
+    width: 100%;
+    margin-top: 80px;
+    display: flex;
+}
+.icons .face-icon{
     height: 100%;
-    width: 30%;
-    background-color: brown;
+    width: 25%;
+
+}
+.icons .face-icon:hover{
+    height: 100%;
+    width: 25%;
+    animation: efeito-y 2s ease-out  infinite;
+}
+.icons .whats-icon{
+    height: 100%;
+    width: 25%;
+}
+.icons .whats-icon:hover{
+    height: 100%;
+    width: 25%;
+    animation: efeito-y 2s ease-out  infinite;
+}
+.icons .github-icon{
+    height: 100%;
+    width: 25%;
+}
+.icons .github-icon:hover{
+    height: 100%;
+    width: 25%;
+    animation: efeito-y 2s ease-out  infinite;
+}
+.icons .linkedin-icon{
+    height: 100%;
+    width: 25%;
+}
+.icons .linkedin-icon:hover{
+    height: 100%;
+    width: 25%;
+    animation: efeito-y 2s ease-out  infinite;
 }
 
-footer .box-footer2{
+
+.contato-direita{
+    width: 50%;
     height: 100%;
-    width: 30%;
-    background-color: brown;
 }
-
-footer .box-footer3{
-    height: 100%;
-    width: 30%;
-    background-color: brown;
-}
-
-
 
 
 @keyframes efeito-y {
