--- a/style.css
+++ b/style.css
@@ -70,9 +70,6 @@ nav ul li{
     margin-top: 30px;
     display: flex; 
     background-color: #18292f;
-    
-
-
 }
 .foto-logo{
     height: 520px;
@@ -83,7 +80,6 @@ nav ul li{
     animation: bounceInLeft ;
     animation-delay: 0s;
     animation-duration: 1s;
-   
 }
 .foto-logo-txt{
     height: 400px;
@@ -169,13 +165,10 @@ nav ul li{
     width: 100%;
     background-color: rgba(24,41,47,0.7);
     display: inline-flex;
-    
-   
 }
 .OqueFazemos-img-esquerda{
     height: 100%;
     width: 50%;
-    
     /* background-color: black; */
 }
 .OqueFazemos-img-esquerda h1{
@@ -284,45 +277,46 @@ nav ul li{
 .icons{
     height: 18%;
     width: 100%;
+    justify-content: space-around;
     margin-top: 80px;
     display: flex;
     
 }
 .icons .face-icon{
     height: 100%;
-    width: 25%;
+    width: 10%;
 
 }
 .icons .face-icon:hover{
     height: 100%;
-    width: 25%;
+    width: 10%;
     animation: efeito-icons 2s ease-out  infinite;
 }
 .icons .whats-icon{
     height: 100%;
-    width: 25%;
+    width: 10%;
 }
 .icons .whats-icon:hover{
     height: 100%;
-    width: 25%;
+    width: 10%;
     animation: efeito-icons 2s ease-out  infinite;
 }
 .icons .github-icon{
     height: 100%;
-    width: 25%;
+    width: 10%;
 }
 .icons .github-icon:hover{
     height: 100%;
-    width: 25%;
+    width: 10%;
     animation: efeito-icons 2s ease-out  infinite;
 }
 .icons .linkedin-icon{
     height: 100%;
-    width: 25%;
+    width: 10%;
 }
 .icons .linkedin-icon:hover{
     height: 100%;
-    width: 25%;
+    width: 10%;
     animation: efeito-icons 2s ease-out  infinite;
 }
 
@@ -398,3 +392,198 @@ nav ul li{
     border-radius: 2px;
 
 }
+
+@media (max-width: 967px){
+    .foto-logo{
+        background-size: 450px;
+    }
+     .p-1{
+        padding-top: 20px;
+    }
+    .OqueFazemos-img-esquerda h3{
+            width: 50%;
+    }
+}
+
+@media (max-width: 885px){
+    .nav-fixo{
+        margin-top: -40px;
+    }
+    .foto-logo{
+        background-size: 400px;
+    }
+    .foto-logo-txt p{
+        margin-top: 40px;
+    }
+    .p-1{
+        padding-top: 30px;
+    }
+    .OqueFazemos-img-esquerda h1{
+        width: 100%;
+    }
+    .OqueFazemos-img-esquerda h3{
+        width: 50%;
+        padding-top: 10px;
+}
+}
+
+@media (max-width: 783px){
+    .foto-logo{
+        background-size: 350px;
+    }
+    .quemSomos-rodape h2{
+        padding-top: 40px;
+    }
+    .conteudo-OqueFazemos{
+        font-size: 15px;
+    }
+    .OqueFazemos-img-direita h2{
+        padding-bottom: 20px;
+    }
+    .icons .face-icon{
+        width: 13%;
+    }
+    .icons .github-icon{
+        width: 13%;
+    }
+    .icons .linkedin-icon{
+        width: 13%;
+    }
+    .icons .whats-icon{
+        width: 13%;
+    }
+    .icons .face-icon:hover{
+        width: 13%;
+    }
+    .icons .github-icon:hover{
+        width: 13%;
+    }
+    .icons .linkedin-icon:hover{
+        width: 13%;
+    }
+    .icons .whats-icon:hover{
+        width: 13%;
+    }
+}
+@media (max-width: 777px){
+    .OqueFazemos-img-direita h2{
+          padding-bottom: 10px;  
+    }
+    .sobre{
+        height: 650px;
+    }
+  
+@media (max-width: 685px){
+    .nav-fixo{
+        margin-top: -10px;
+    }
+    .foto-logo{
+    margin-top: 50px;
+    height: 250px;
+    width: 100%;
+    background-image: url(imagens/logo.png);
+    background-repeat: no-repeat;
+    background-position: center; 
+    background-size: 400px;
+    animation: bounceInLeft ;
+    animation-delay: 0s;
+    animation-duration: 1s;
+    
+
+    }
+    .foto-logo-txt{
+        height: 400px;
+        width: 100%;
+    } 
+    .foto-logo-txt p{
+        text-align: center;
+    } 
+    .conteudo-quemSomos{
+        height: 850px;
+        width: 90%;
+        margin-left: 5%;
+        margin-top: 30px;
+        display: inline-block;
+        background-color: #18292f;
+    }
+    .quemSomos-rodape h2{
+
+        padding-top: 10px;
+        
+    }
+    .conteudo-quemSomos{
+        height: 750px;
+        
+    }
+    .sobre{
+        height: 680px;
+    }
+}
+
+@media (max-width: 645px){
+    .conteudo-OqueFazemos{
+        height: 500px;
+        width: 90%;
+        margin-left: 5%;
+        text-align: center;
+        background-image: url(imagens/img-sobre1.jpg);
+        background-repeat: none;
+        background-position: center;
+        
+       
+        
+    }
+    .OqueFazemos-img{
+        height: 100%;
+        width: 100%;  
+        display: inline-block;
+        background-color: rgba(24,41,47,0.7);
+        
+    }
+
+    .OqueFazemos-img-esquerda{
+        height: 20%;
+        width: 100%;
+    }
+    .OqueFazemos-img-esquerda h1{
+        text-align: left;
+        font-weight: 400;
+       
+    }
+    .OqueFazemos-img-esquerda a{
+        color: #73cc80;
+        text-decoration: none;
+    }
+    .OqueFazemos-img-esquerda a:hover{
+        text-decoration: underline;
+       
+    }
+    .OqueFazemos-img-esquerda h3{
+        margin-left: 16%;
+        right: 10%;
+        width: 30%; 
+    }
+
+
+    .OqueFazemos-img-direita{
+        height: 50%;
+        width: 100%;
+    } 
+    
+    .OqueFazemos-img-direita ul{
+        height: 100%;
+        list-style: none;
+        padding-top: 20px;
+    }
+    .OqueFazemos-img-direita li{
+       padding-top: 10px;
+       color: #f7f7f7;
+       
+    }
+    .OqueFazemos-img-direita h2{
+        font-weight: 400;
+    }
+
+}
+
+
