--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body{
     font-family: 'Courier New', Courier, monospace;
     background-color: #1b2d33;
     color: #f7f7f7;
+    font-size: 20px;
     
 
  }
@@ -27,12 +28,12 @@ body{
 nav{
    z-index: 1000;
    width: 90%;
-   height: 70px;
+   height: 100px;
    margin-left: 5%;
    position: fixed; 
-   background-color: #18292f; 
+   background-color: #18292f;  
    box-shadow: 0px 2px 0px #1b2d33;
-   padding-top: 12px;
+   padding-top: 25px;
    
 }
 
@@ -72,15 +73,16 @@ nav ul li{
     background-color: #18292f;
 }
 .foto-logo{
-    height: 520px;
+    height: 620px;
     width: 50%;
-    background-image: url(imagens/Logo\ Deep\ Code.png);
+    background-image: url(imagens/logo.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 850px;
     animation: bounceInLeft ;
     animation-delay: 0s;
     animation-duration: 1s;
+
 }
 .foto-logo-txt{
     height: 400px;
@@ -90,8 +92,9 @@ nav ul li{
 } 
 
 .foto-logo-txt p{
-    margin-top: 68px;
+    margin-top: 75px;
     text-align: left;
+    
     
     
 }
@@ -155,10 +158,10 @@ nav ul li{
     margin-left: 5%;
     margin-top: 60px; 
     text-align: center;
-     /* background-color: #18292f;  */
     background-image: url(imagens/img-sobre1.jpg);
-    background-repeat: none;
+    background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     
 }
 .OqueFazemos-img{
@@ -263,6 +266,8 @@ nav ul li{
 
 }
 
+
+
 .contato{
     margin-top: 60px; 
     height: 400px;
@@ -279,10 +284,12 @@ nav ul li{
     width: 50%;
     height: 100%;
     text-align: center;
+   
 }
 .contato-esquerda h1{
-    margin-top: 50px;
+    margin-top: 20px;
     font-weight: 400;
+    padding-top: 30px;
 }
 .contato-esquerda h3{
     font-weight: 400;
@@ -291,14 +298,14 @@ nav ul li{
     height: 18%;
     width: 100%;
     justify-content: space-around;
-    margin-top: 80px;
-    display: flex;
+    padding-top: 10px;
+    margin-top: 10px;
+    display: flex; 
     
 }
 .icons .face-icon{
     height: 100%;
     width: 10%;
-
 }
 .icons .face-icon:hover{
     height: 100%;
@@ -485,6 +492,7 @@ nav ul li{
     .sobre{
         height: 650px;
     }
+}
   
 @media (max-width: 685px){
     .nav-fixo{
@@ -494,7 +502,7 @@ nav ul li{
     margin-top: 50px;
     height: 250px;
     width: 100%;
-    background-image: url(imagens/logo.png);
+    background-image: url(imagens/Logo\ Deep\ Code.png);
     background-repeat: no-repeat;
     background-position: center; 
     background-size: 400px;
@@ -541,10 +549,7 @@ nav ul li{
         text-align: center;
         background-image: url(imagens/img-sobre1.jpg);
         background-repeat: none;
-        background-position: center;
-        
-       
-        
+        background-position: center; 
     }
     .OqueFazemos-img{
         height: 100%;
