--- a/sobre.css
+++ b/sobre.css
@@ -13,6 +13,7 @@ body{
     font-family: 'Courier New', Courier, monospace;
     background-color: #1b2d33;
     color: #f7f7f7;
+    font-size: 20px;
  }
 
  .nav-fixo{
@@ -31,7 +32,8 @@ nav{
   position: fixed; 
   background-color: #18292f; 
   box-shadow: 0px 2px 0px #1b2d33;
-  padding-top: 12px;
+  padding-top: 25px;
+  height: 100px;
   
 }
 
@@ -119,9 +121,9 @@ nav ul li{
 
 } 
 .imagem-criador{
-   width: 30%;
-   height: 300px;
-   background-color: #f7f7f7;
+   width: 25%;
+   height: 400px;
+   /* background-color: #f7f7f7; */
 }
 .imagem-criador p{
    color: #73cc80;
