--- a/style.css
+++ b/style.css
@@ -287,56 +287,53 @@ nav ul li{
    
 }
 .contato-esquerda h1{
-    margin-top: 20px;
+    margin-top: 10px;
     font-weight: 400;
     padding-top: 30px;
 }
 .contato-esquerda h3{
     font-weight: 400;
+
 }
 .icons{
     height: 18%;
     width: 100%;
     justify-content: space-around;
     padding-top: 10px;
-    margin-top: 10px;
+    margin-top: 45px;
     display: flex; 
     
 }
 .icons .face-icon{
-    height: 100%;
-    width: 10%;
+    height: 80%;
+    width: 9%;
 }
 .icons .face-icon:hover{
-    height: 100%;
-    width: 10%;
+   
     animation: efeito-icons 2s ease-out  infinite;
 }
 .icons .whats-icon{
-    height: 100%;
-    width: 10%;
+    height: 80%;
+    width: 9%;
 }
 .icons .whats-icon:hover{
-    height: 100%;
-    width: 10%;
+    
     animation: efeito-icons 2s ease-out  infinite;
 }
 .icons .github-icon{
-    height: 100%;
-    width: 10%;
+    height: 80%;
+    width: 9%;
 }
 .icons .github-icon:hover{
-    height: 100%;
-    width: 10%;
+    
     animation: efeito-icons 2s ease-out  infinite;
 }
 .icons .linkedin-icon{
-    height: 100%;
-    width: 10%;
+    height: 80%;
+    width: 9%;
 }
 .icons .linkedin-icon:hover{
-    height: 100%;
-    width: 10%;
+   
     animation: efeito-icons 2s ease-out  infinite;
 }
 
@@ -412,6 +409,94 @@ nav ul li{
     border-radius: 2px;
 
 }
+@media (max-width: 1633px){
+    .foto-logo{
+        background-size: 650px;
+    }
+     
+}
+@media (max-width: 1244px){
+    .foto-logo{
+        background-size: 550px;
+    }
+    .sobre-box h2{
+    padding-top: 60px;
+    font-weight: 400;
+    color: #73cc80;
+    }
+    .icons .face-icon{
+    height: 80%;
+    width: 10%;
+    }
+    .icons .whats-icon{
+        height: 80%;
+        width: 10%;
+        }
+    .icons .github-icon{
+        height: 80%;
+        width: 10%;
+        }
+    .icons .whats-icon{
+        height: 80%;
+        width: 10%;
+        }
+    .icons .linkedin-icon{
+        height: 80%;
+        width: 10%;
+
+    }        
+    .icons{
+        margin-top: 30px;
+    }
+    .quemSomos-rodape{
+        padding-top: 50px;
+    }
+    .OqueFazemos-img-esquerda h3{
+        width: 50%;
+    }
+}
+
+@media (max-width: 1116px){
+    .foto-logo-txt p{
+        padding-top: 20px;
+        margin-top: 40px;
+    }
+    .foto-logo-txt .p-1{
+        margin-top: 80px;
+    }
+    .sobre-box h2{
+        padding-top: 40px;
+        font-weight: 400;
+        color: #73cc80;
+        }
+        .icons .face-icon{
+            height: 80%;
+            width: 13%;
+            }
+        .icons .whats-icon{
+            height: 80%;
+            width: 13%;
+            }
+        .icons .github-icon{
+            height: 80%;
+            width: 13%;
+            }
+        .icons .whats-icon{
+            height: 80%;
+            width: 13%;
+            }
+        .icons .linkedin-icon{
+            height: 80%;
+            width: 13%; 
+        }
+        .OqueFazemos-img-esquerda h1{
+            font-size: 35px;
+            text-align: left;
+            padding-bottom: 30px;
+        }
+    }
+
+    
 
 @media (max-width: 967px){
     .foto-logo{
