--- a/form.css
+++ b/form.css
@@ -14,7 +14,14 @@ body{
     height: 800px;
     background-color: #18292f;
     margin-top: 50px;
-    display: flex;
+    display: flex;  text-align: center;
+  
+}
+
+.centro{
+    width: 100%;
+    height: 10%;
+    background-color: aqua;
 }
 .left{
     width: 50%;
@@ -23,16 +30,57 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     background-size: 600px;
+   
+    position: relative;
 }
 .right{
-    width: 50%;
+  
+        width: 50%;
     height: 100%;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+form{
+  
+   width: 100%;
+   height: 100%;
+    position: relative;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+
 }
 .formu{
-    width: 100%;
+    width: 80%;
+    height: 80%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+   flex-direction: column;
+   
 
 }
+p{
+    margin: 1%;
+}
+input{
+    border-radius: 10px;
+    height: 35px;
+    border: none;
+    width: 300px;
+    background-color: #18292f;
+    border-bottom: 1px solid white;
+}
+button{
+  
 
-
+    height: 30px;
+    width: 100px;
+}
+#txt{
+    margin-top: 5%;
+}
 
 
