--- a/thanks.css
+++ b/thanks.css
@@ -35,6 +35,7 @@ body{
     text-align: center;
     padding-top: 60px;
 }
+
 .baixo h2{
     text-align: center;
     padding-top: 50px;
@@ -42,5 +43,8 @@ body{
 a{
     text-decoration: none;
     color: #f7f7f7;
+}
+a:hover{
+    color: #73cc80;
 }
 
