--- a/orcamento.css
+++ b/orcamento.css
@@ -1,47 +1,85 @@
 *{
-    padding: 0;
     margin: 0;
-    /* border: 0; */
+    padding: 0;
     box-sizing: border-box;
 }
 body{
-    font-family: 'Courier New', Courier, monospace;
-    background-color: #1b2d33;
+    background-color:#1b2d33;
     color: #f7f7f7;
-    font-size: 20px;
+    font-family: 'Courier New', Courier, monospace;
 }
 
-fieldset{
+.form-cont{
+    width: 100%;
+    height: 800px;
+    background-color: #18292f;
     margin-top: 50px;
-    height: 500px;
-    width: 50%;
-    margin-left: 20%;
+    display: flex;  text-align: center;
+  
 }
 
-legend{
-    text-align: center;
+.centro{
+    width: 100%;
+    height: 10%;
+    background-color: aqua;
+}
+.left{
+    width: 50%;
+    height: 100%;
+    background-image: url(imagens/logo.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 600px;
+   
+    position: relative;
+}
+.right{
+  
+        width: 50%;
+    height: 100%;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 form{
-    display: grid;
-    height: 100%;
+  
+   width: 100%;
+   height: 100%;
+    position: relative;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+
+}
+.formu{
+    width: 80%;
+    height: 80%;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+   flex-direction: column;
+   
+
+}
+p{
+    margin: 1%;
 }
 input{
-    width: 50%;
-    padding: 8px 0px;
-    margin: 8px 0px;
-    height: 30px;
-    margin-left: 25%;
-}
-#lb{
-    padding-top: 40px;
-}
-label{
-    text-align: center;
+    border-radius: 10px;
+    height: 35px;
+    border: none;
+    width: 300px;
+    background-color: #18292f;
+    border-bottom: 1px solid white;
 }
 button{
-    width: 10%;
-    margin-left: 45%;
     height: 30px;
-    margin-top: 50px;
-    cursor: pointer;
+    width: 100px;
 }
+#txt{
+    margin-top: 5%;
+}
+
+
+
