--- a/orcamento.css
+++ b/orcamento.css
@@ -59,8 +59,6 @@ form{
     display: flex;
     justify-content: center;
    flex-direction: column;
-   
-
 }
 p{
     margin: 1%;
@@ -72,6 +70,7 @@ input{
     width: 300px;
     background-color: #18292f;
     border-bottom: 1px solid white;
+    color: #f7f7f7;
 }
 button{
     height: 30px;
