--- a/style.css
+++ b/style.css
@@ -264,6 +264,24 @@ nav ul li{
     background-color: #18292f;
 }
 
+.carrossel{
+    width: 100%;
+    height: 70%;
+    overflow: hidden;
+
+}
+.container{
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    transform: translateX(0);
+    margin-top: 10%;
+}
+.container img{
+    object-fit: cover;
+    height: 50%;
+    width: 50%;
+}
+
 
 
 
