--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ nav ul li{
 
 .carrossel{
     width: 100%;
-    height: 70%;
+    height: 100%;
     overflow: hidden;
 
 }
@@ -274,12 +274,17 @@ nav ul li{
     display: flex;
     transition: transform 0.5s ease-in-out;
     transform: translateX(0);
-    margin-top: 10%;
+    width: 100%;
+    height: 100%;
+     /* margin-top: 5%;  */
 }
 .container img{
+    padding-left: 30%;
     object-fit: cover;
-    height: 50%;
-    width: 50%;
+    background-position: cover;
+   
+
+    
 }
 
 
