--- a/style.css
+++ b/style.css
@@ -276,11 +276,12 @@ nav ul li{
     transition: transform 0.5s ease-in-out;
     transform: translateX(0);
     width: 100%;
-    height: 100%;
+    height: 80%;
      /* margin-top: 5%;  */
 }
 .container img{
-    padding-left: 30%;
+    margin-top: 3%;
+    padding-left: 25%;
     object-fit: cover;
     background-position: cover;
    
