--- a/css/sobre.css
+++ b/css/sobre.css
@@ -11,7 +11,7 @@ html{
 }
 body{
     font-family: 'Courier New', Courier, monospace;
-    background-color: #1b2d33;
+    background-color: #0d0221;
     color: #f7f7f7;
     font-size: 20px;
  }
