--- a/css/orcamento.css
+++ b/css/orcamento.css
@@ -4,15 +4,15 @@
     box-sizing: border-box;
 }
 body{
-    background-color:#1b2d33;
-    color: #f7f7f7;
+    background-color:#261447;
+    color: #2de2e6;
     font-family: 'Courier New', Courier, monospace;
 }
 
 .form-cont{
     width: 100%;
     height: 800px;
-    background-color: #18292f;
+    background-color: #0d0221;
     margin-top: 50px;
     display: flex;  text-align: center;
   
@@ -21,7 +21,7 @@ body{
 .centro{
     width: 100%;
     height: 10%;
-    background-color: aqua;
+    background-color: #2de2e6;
 }
 .left{
     width: 50%;
@@ -68,17 +68,19 @@ input{
     height: 35px;
     border: none;
     width: 300px;
-    background-color: #18292f;
-    border-bottom: 1px solid white;
-    color: #f7f7f7;
+    background-color: #2E2157;
+    border-bottom: 1px solid #f6019d;
+    color: #ffffff;
 }
 button{
     height: 30px;
     width: 100px;
-}
+    background-color: #f6019d ;
+    color : #2de2e6 }
 #txt{
     margin-top: 5%;
 }
+
 
 
 
