--- a/css/sobre.css
+++ b/css/sobre.css
@@ -11,8 +11,8 @@ html{
 }
 body{
     font-family: 'Courier New', Courier, monospace;
-    background-color: #0d0221;
-    color: #f7f7f7;
+    background-color: #261447;
+    color: #2de2e6;
     font-size: 20px;
  }
 
@@ -30,8 +30,8 @@ nav{
   height: 70px;
   margin-left: 5%;
   position: fixed; 
-  background-color: #18292f; 
-  box-shadow: 0px 2px 0px #1b2d33;
+  background-color: #261447; 
+  box-shadow: 0px 2px 0px #0d0221;
   padding-top: 25px;
   height: 100px;
   
@@ -47,13 +47,13 @@ nav ul{
 }
 nav ul a{
    text-decoration: none;
-   color: #f7f7f7;
+   color: #2de2e6;
    cursor: pointer;
    
 
 }
 nav ul a:hover{
-   color: #8ae998;
+   color: #f6019d;
    text-decoration: overline;
 
 }
@@ -71,7 +71,7 @@ nav ul li{
     margin-left: 5%;
     margin-top: 30px;
     padding-top: 30px;
-    background-color: #18292f;
+    background-color: #0d0221;
  }
  .logo-historia{
     width: 100%;
@@ -92,15 +92,15 @@ nav ul li{
  
  .conteudo-historia h1{
     font-weight: 400;
-    color: #f7f7f7;
+    color: #2de2e6;
  }
  .conteudo-historia h3{
     padding-top: 60px;
     text-align: left;
-    color: #73cc80;
+    color: #f6019d;
  }
  .conteudo-historia h4{
-    color: #73cc80;
+    color: #f6019d;
     padding-top: 30px;
  }
  .conteudo-historia .p-top{
@@ -108,7 +108,7 @@ nav ul li{
  }
  .conteudo-historia p{
     text-align: center;
-    color: #f7f7f7;
+    color: #2de2e6;
     padding: 10px;
  }
 
@@ -126,7 +126,7 @@ nav ul li{
    /* background-color: #f7f7f7; */
 }
 .imagem-criador p{
-   color: #73cc80;
+   color: #f6019d;
    text-align: center;
    padding-top: 15px;
 }
@@ -141,7 +141,7 @@ nav ul li{
    padding-left: 30px;
 }
 .conteudo-criador .p-criador{
-   color: #73cc80;
+   color: #f6019d;
    text-align: center;
 }
 
@@ -153,7 +153,7 @@ nav ul li{
     background-color: #18292f;
 }
 ::-webkit-scrollbar-thumb{
-    background-color: #73cc80;
+    background-color: #f6019d;
     border-radius: 2px;
 
 }
