--- a/css/sobre.css
+++ b/css/sobre.css
@@ -15,54 +15,37 @@ body{
     color: #2de2e6;
     font-size: 20px;
  }
-
- .nav-fixo{
-   width: 100%;
-   position: fixed;
-   margin-top: -3%;
+ .nav-fixed{
    z-index: 1000;
-       
-}   
-
-nav{
-  z-index: 1000;
-  width: 90%;
-  height: 70px;
-  margin-left: 5%;
-  position: fixed; 
-  background-color: #261447; 
-  box-shadow: 0px 2px 0px #0d0221;
-  padding-top: 25px;
-  height: 100px;
-  
+   width: 100%;
+   position: fixed;  
+   top: 3%;
+   margin-top: -2.5em; 
 }
 
-
-nav ul{
-   display: flex; 
-   list-style: none;
+.bg-body-tertiary{
+   --bs-bg-opacity: none !important;
+}
+.container-fluid{
+   background-color: #261447;
+   height: 100px;
+}
+#navbarNav{
+   height: 100%;
    justify-content: center;
-
-  
+   align-items: center;
 }
-nav ul a{
-   text-decoration: none;
-   color: #2de2e6;
-   cursor: pointer;
-   
-
+.navbar-nav{
+   width: 50%;
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
 }
-nav ul a:hover{
+.navbar-collapse ul li a{
    color: #f6019d;
-   text-decoration: overline;
-
 }
-nav ul li{
-   margin-left: 50px;
-   margin-top: 20px; 
-
-   
-
+.navbar-collapse ul li a:hover{
+   color: #2de2e6;
 }
 
  .historia{
