--- a/css/style.css
+++ b/css/style.css
@@ -11,156 +11,71 @@ html{
 }
 body{
     font-family: 'Courier New', Courier, monospace;
-    background-color: #261447;
-    color: #2de2e6;
+    background-color: #261447 !important;
+    color: #2de2e6 !important ;
     font-size: 20px;
-    
-
-
  }
  @font-face {
     font-family: RetroFont;
     src: url(/fonts/MasterDroid.ttf);
   }
-  .nav-fixo{
-    width: 100%;
-    position: fixed;
-    margin-top: -3%;
+/* NAV INIVIO */
+.nav-fixed{
     z-index: 1000;
-        
-}   
-
-nav{
-   z-index: 1000;
-   width: 90%;
-   height: 100px;
-   margin-left: 5%;
-   position: fixed; 
-   background-color: #261447;  
-   box-shadow: 0px 2px 0px #0d0221;
-   padding-top: 25px;
-   
-}
-
-
-nav ul{
-    display: flex;
-    list-style: none;
-    justify-content: center;
-}
-nav ul a{
-    text-decoration: none;
-    color: #2de2e6;
-    cursor: pointer;
-    font-weight: 800;
-    
-  
-}
-nav ul a:hover{
-  text-decoration: overline;
-  transform: scale(1.1);
-  animation: efeito-nav 1s ease-out both;
-  color: #f6019d;
-  
+    width: 100%;
+    position: fixed;  
+    top: 3%;
+    margin-top: -2.5em; 
+ }
  
+.bg-body-tertiary{
+    --bs-bg-opacity: none !important;
 }
-nav ul li{
-    margin-left: 50px;
-    margin-top: 20px; 
+.container-fluid{
+    background-color: #261447;
+    height: 100px;
+}
+#navbarNav{
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.navbar-nav{
+    width: 50%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.navbar-collapse ul li a{
+    color: #f6019d;
+}
+.navbar-collapse ul li a:hover{
+    color: #2de2e6;
+}
 
-    
-}
+/* NAV FIM */
+
 .conteudo-quemSomos{
-    height: 550px;
+    height: 650px;
     width: 90%;
     margin-left: 5%;
-    margin-top: 30px;
-    display: flex; 
+    margin-top: 120px;
     background-color: #0d0221;
     overflow: hidden;
 }
-.foto-logo{
-    height: 620px;
-    width: 50%;
-    background-image: url(/imagens/logo.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 750px;
-    animation: bounceInLeft ;
-    animation-delay: 0s;
-    animation-duration: 1s;
-    
-    
-
+.carousel-inner{
+    height: 100%;
+    width: 100%;
 }
-.foto-logo-txt{
-    height: 400px;
-    width: 50%;
-    text-align: center;
-   
+.carousel-item{
+    height: 100%;
+    width: 100%;
 } 
-
-.foto-logo-txt p{
-    margin-top: 75px;
-    text-align: left;
-    font-size: 22px;
+.carousel-item img{
+    height: 100%;
+    width: 100%;
     
     
-    
-}
-
-.p-1{
-    animation: backInRight;
-    animation-delay: 0s;
-    animation-duration: 1s; 
-    color: #2de2e6;
-    
-}
-.p-2{
-    animation: backInRight;
-    animation-delay: 0s;
-    animation-duration: 1.2s; 
-    color: #2de2e6;
-    
-}
-.p-3{
-    animation: backInRight;
-    animation-delay: 0s;
-    animation-duration: 1.3s; 
-    color: #2de2e6;
-   
-}
-
-.quemSomos-rodape{
-    height: 100px;
-    width: 90%; 
-    margin-left: 5%;
-    background-color: #0d0221; 
-}
-
-.quemSomos-rodape> h2{
-    color: #2de2e6;
-    text-align: center;
-    /* animation: efeito-x 3s ease-out; */
-    width: 80%;
-    height: 50px;
-    margin-left: 10%;   
-    font-weight: 400;
-    font-family: 'RetroFont';
-   
-   
-}
-
-.topo-OqueFazemos{
-    width: 80%;
-    height: 60px;
-    margin-top: 150px;
-    text-align: center;
-    margin-left: 10%;
-}
-
-.topo-OqueFazemos h1{
-    animation: efeito-x 3s ease-out ; 
 }
 
 .conteudo-OqueFazemos{
@@ -311,7 +226,7 @@ nav ul li{
 
 .contato{
     margin-top: 60px; 
-    height: 400px;
+    height: 450px;
     width: 90%;
     margin-left: 5%;
     display: flex;
@@ -450,287 +365,4 @@ nav ul li{
 ::-webkit-scrollbar-thumb{
     background-color: #f6019d;
     border-radius: 2px;
-    
-
 }
-@media (max-width: 1633px){
-    .foto-logo{
-        background-size: 650px;
-    }
-     
-}
-@media (max-width: 1244px){
-    .foto-logo{
-        background-size: 550px;
-    }
-    .sobre-box h2{
-    padding-top: 60px;
-    font-weight: 400;
-    color: #f6019d;
-    }
-    .icons .face-icon{
-    height: 80%;
-    width: 10%;
-    }
-    .icons .whats-icon{
-        height: 80%;
-        width: 10%;
-        }
-    .icons .github-icon{
-        height: 80%;
-        width: 10%;
-        }
-    .icons .whats-icon{
-        height: 80%;
-        width: 10%;
-        }
-    .icons .linkedin-icon{
-        height: 80%;
-        width: 10%;
-
-    }        
-    .icons{
-        margin-top: 30px;
-    }
-    .quemSomos-rodape{
-        padding-top: 50px;
-    }
-    .OqueFazemos-img-esquerda h3{
-        width: 50%;
-    }
-}
-
-@media (max-width: 1116px){
-    .foto-logo-txt p{
-        padding-top: 20px;
-        margin-top: 40px;
-    }
-    .foto-logo-txt .p-1{
-        margin-top: 80px;
-    }
-    .sobre-box h2{
-        padding-top: 40px;
-        font-weight: 400;
-        color: #f6019d;
-        }
-        .icons .face-icon{
-            height: 80%;
-            width: 13%;
-            }
-        .icons .whats-icon{
-            height: 80%;
-            width: 13%;
-            }
-        .icons .github-icon{
-            height: 80%;
-            width: 13%;
-            }
-        .icons .whats-icon{
-            height: 80%;
-            width: 13%;
-            }
-        .icons .linkedin-icon{
-            height: 80%;
-            width: 13%; 
-        }
-        .OqueFazemos-img-esquerda h1{
-            font-size: 35px;
-            text-align: left;
-            padding-bottom: 30px;
-        }
-    }
-
-    
-
-@media (max-width: 967px){
-    .foto-logo{
-        background-size: 450px;
-    }
-     .p-1{
-        padding-top: 20px;
-    }
-    .OqueFazemos-img-esquerda h3{
-            width: 50%;
-    }
-}
-
-@media (max-width: 885px){
-    .nav-fixo{
-        margin-top: -40px;
-    }
-    .foto-logo{
-        background-size: 400px;
-    }
-    .foto-logo-txt p{
-        margin-top: 40px;
-    }
-    .p-1{
-        padding-top: 30px;
-    }
-    .OqueFazemos-img-esquerda h1{
-        width: 100%;
-    }
-    .OqueFazemos-img-esquerda h3{
-        width: 50%;
-        padding-top: 10px;
-}
-}
-
-@media (max-width: 783px){
-    .foto-logo{
-        background-size: 350px;
-    }
-    .quemSomos-rodape h2{
-        padding-top: 40px;
-    }
-    .conteudo-OqueFazemos{
-        font-size: 15px;
-    }
-    .OqueFazemos-img-direita h2{
-        padding-bottom: 20px;
-    }
-    .icons .face-icon{
-        width: 13%;
-    }
-    .icons .github-icon{
-        width: 13%;
-    }
-    .icons .linkedin-icon{
-        width: 13%;
-    }
-    .icons .whats-icon{
-        width: 13%;
-    }
-    .icons .face-icon:hover{
-        width: 13%;
-    }
-    .icons .github-icon:hover{
-        width: 13%;
-    }
-    .icons .linkedin-icon:hover{
-        width: 13%;
-    }
-    .icons .whats-icon:hover{
-        width: 13%;
-    }
-}
-@media (max-width: 777px){
-    .OqueFazemos-img-direita h2{
-          padding-bottom: 10px;  
-    }
-    .sobre{
-        height: 650px;
-    }
-}
-  
-@media (max-width: 685px){
-    .nav-fixo{
-        margin-top: -10px;
-    }
-    .foto-logo{
-    margin-top: 50px;
-    height: 250px;
-    width: 100%;
-    background-image: url(imagens/Logo\ Deep\ Code.png);
-    background-repeat: no-repeat;
-    background-position: center; 
-    background-size: 400px;
-    animation: bounceInLeft ;
-    animation-delay: 0s;
-    animation-duration: 1s;
-    
-
-    }
-    .foto-logo-txt{
-        height: 400px;
-        width: 100%;
-    } 
-    .foto-logo-txt p{
-        text-align: center;
-    } 
-    .conteudo-quemSomos{
-        height: 850px;
-        width: 90%;
-        margin-left: 5%;
-        margin-top: 30px;
-        display: inline-block;
-        background-color: #261447;
-    }
-    .quemSomos-rodape h2{
-
-        padding-top: 10px;
-        
-    }
-    .conteudo-quemSomos{
-        height: 750px;
-        
-    }
-    .sobre{
-        height: 680px;
-    }
-}
-
-@media (max-width: 645px){
-    .conteudo-OqueFazemos{
-        height: 500px;
-        width: 90%;
-        margin-left: 5%;
-        text-align: center;
-        background-image: url(imagens/img-sobre1.jpg);
-        background-repeat: none;
-        background-position: center; 
-    }
-    .OqueFazemos-img{
-        height: 100%;
-        width: 100%;  
-        display: inline-block;
-        background-color: rgba(24,41,47,0.7);
-        
-    }
-
-    .OqueFazemos-img-esquerda{
-        height: 20%;
-        width: 100%;
-    }
-    .OqueFazemos-img-esquerda h1{
-        text-align: left;
-        font-weight: 400;
-       
-    }
-    .OqueFazemos-img-esquerda a{
-        color: #f6019d;
-        text-decoration: none;
-    }
-    .OqueFazemos-img-esquerda a:hover{
-        text-decoration: underline;
-       
-    }
-    .OqueFazemos-img-esquerda h3{
-        margin-left: 16%;
-        right: 10%;
-        width: 30%; 
-    }
-
-
-    .OqueFazemos-img-direita{
-        height: 50%;
-        width: 100%;
-    } 
-    
-    .OqueFazemos-img-direita ul{
-        height: 100%;
-        list-style: none;
-        padding-top: 20px;
-    }
-    .OqueFazemos-img-direita li{
-       padding-top: 10px;
-       color: #2de2e6;
-       
-    }
-    .OqueFazemos-img-direita h2{
-        font-weight: 400;
-    }
-
-}
-
-
