--- a/css/orcamento.css
+++ b/css/orcamento.css
@@ -11,7 +11,7 @@ body{
 
 .form-cont{
     width: 100%;
-    height: 800px;
+    height: 780px;
     background-color: #0d0221;
     margin-top: 50px;
     display: flex;  text-align: center;
@@ -80,7 +80,43 @@ button{
 #txt{
     margin-top: 5%;
 }
-
+.left{
+    left: 5%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.left h1{
+    position: relative;
+    bottom: 10%;
+    left: 1%;
+    font-size: 70px;
+}
+.menu{
+    margin: 0;
+    position: relative;
+    
+    width: 100%;
+    height: 80px;
+    background-color: #0d0221;
+    color: #f6019d;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    font-size: 25px;
+ }
+ li a{
+    text-decoration: none;
+    color: #f6019d;
+       list-style: none;
+    
+ 
+ }
+ li {
+    list-style-type: none;
+  }
 
 
 
