--- a/css/sobre.css
+++ b/css/sobre.css
@@ -49,7 +49,7 @@ body{
 }
 
  .historia{
-    height: 1300px;
+    height: 1700px;
     width: 90%;
     margin-left: 5%;
     margin-top: 30px;
@@ -140,3 +140,31 @@ body{
     border-radius: 2px;
 
 }
+.center{
+ display: flex;
+ align-items: center;
+ justify-content: center;
+}
+.menu{
+   margin: 0;
+   position: relative;
+   
+   width: 100%;
+   height: 80px;
+   background-color: #0d0221;
+   color: #f6019d;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   list-style: none;
+}
+li a{
+   text-decoration: none;
+   color: #f6019d;
+      list-style: none;
+   
+
+}
+li {
+   list-style-type: none;
+ }
