--- a/css/style.css
+++ b/css/style.css
@@ -366,3 +366,26 @@ body{
     background-color: #f6019d;
     border-radius: 2px;
 }
+.menu{
+   margin: 0;
+   position: relative;
+   
+   width: 100%;
+   height: 80px;
+   background-color: #0d0221;
+   color: #f6019d;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   list-style: none;
+}
+li a{
+   text-decoration: none;
+   color: #f6019d;
+      list-style: none;
+   
+
+}
+li {
+   list-style-type: none;
+ }
