--- a/css/orcamento.css
+++ b/css/orcamento.css
@@ -118,5 +118,22 @@ button{
     list-style-type: none;
   }
 
+  @media (min-width:300px) and (max-width:600px) {
+    .menu{
+        width: 100%;
+    }
+    .form-cont{
+        display: flex;
+    }
+    .left img{
+        width: 100px;
+        height: 100px;
+    }
+    .left h1{
+        font-size: 10px;
+    }
+    
+  }
+
 
 
