--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ html{
 }
 body{
     font-family: 'Courier New', Courier, monospace;
-    background-color: #261447 !important;
-    color: #2de2e6 !important ;
+    background-color: #0d0221;
+    color: #2de2e6;
     font-size: 20px;
  }
  @font-face {
@@ -389,3 +389,4 @@ li a{
 li {
    list-style-type: none;
  }
+
