--- a/css/orcamento.css
+++ b/css/orcamento.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color:#261447;
+    background-color: #0d0221;
     color: #2de2e6;
     font-family: 'Courier New', Courier, monospace;
 }
@@ -14,7 +14,8 @@ body{
     height: 780px;
     background-color: #0d0221;
     margin-top: 50px;
-    display: flex;  text-align: center;
+    display: flex;
+    text-align: center;
   
 }
 
@@ -104,10 +105,9 @@ button{
 .menu{
     margin: 0;
     position: relative;
-    
     width: 100%;
     height: 80px;
-    background-color: #0d0221;
+    background-color: #261447;
     color: #f6019d;
     display: flex;
     align-items: center;
