--- a/css/sobre.css
+++ b/css/sobre.css
@@ -230,7 +230,7 @@ li {
    /* background-color: #f6019d; */
    position: fixed;
    right: 80%;
-   bottom: 81%;  
+   top: -6%;  
    display: none;
 }
 .seta-cima a{
